--- a/skripsi/public/css/dashboard.css
+++ b/skripsi/public/css/dashboard.css
@@ -1933,7 +1933,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #fff;
+  color: #db2323;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
@@ -14600,7 +14600,7 @@ dl {
     padding-right: 15px;
     width: calc(100% - 260px);
     height: 70px;
-    background: #ab7747; }
+    background: #58A06A; }
     @media (max-width: 991px) {
       .navbar .navbar-menu-wrapper {
         width: 100%;
@@ -14673,7 +14673,7 @@ dl {
               width: 34px;
               height: 34px;
               border-radius: 50px;
-              background: #3f3f40;
+              background: #58A06A;
               text-align: center;
               line-height: 2.2; }
         .navbar .navbar-menu-wrapper .navbar-nav .nav-item.dropdown .count-indicator {
@@ -14884,8 +14884,8 @@ dl {
 /* Sidebar */
 .sidebar {
   min-height: calc(100vh - 70px);
-  background: -webkit-gradient(linear, left top, left bottom, from(#ffe7c4), to(#ab7747));
-  background: linear-gradient(to bottom, #ffe7c4, #ab7747);
+  background: -webkit-gradient(linear, left top, left bottom, from(#58A06A), to(#58A06A));
+  background: linear-gradient(to bottom, #ffe7c4, #58A06A);
   font-family: "Rubik", sans-serif;
   padding: 0;
   width: 260px;
